# swagger.yaml
@@ -196,3 +196,20 @@ paths:
           description: bad request
         500:
           description: Internal Server Error
+  /logout:
+    get:
+      tags:
+        - User
+      parameters:
+        - in: header
+          name: cookie
+      summary: logout route for any registered user
+      responses:
+        200:
+          description: success
+        404:
+          description: Not Found
+        400:
+          description: bad request
+        500:
+          description: Internal Server Error
